alignment issue, #298

--- a/client/styles/components/_toolbar.scss
+++ b/client/styles/components/_toolbar.scss
@@ -88,6 +88,7 @@
 		}
 	}
 	cursor: pointer;
+	line-height: 18px;
 
 	.toolbar__project-name-container--editing & {
 		display: none;
@@ -124,7 +125,7 @@
 		height: #{18 / $base-font-size}rem;
 	}
 	@include themify() {
-		& path { 
+		& path {
 			fill: getThemifyVariable('inactive-text-color');
 		}
 	}
